Module 2: removed Docker section from readme.md (#99)
The reason being the buildDocker bash script had an issue with Gradle Enterprise plugin when
building the docker images.